<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GanjilGenap">

    <EditText
        android:id="@+id/EdtBilangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/EdtBilangan"
        android:textAlignment="center"
        android:inputType="number"
        android:paddingLeft="20pt"
        android:paddingRight="20pt" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/BtnBilangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10pt"
            android:paddingBottom="10pt"
            android:paddingRight="20pt"
            android:paddingLeft="20pt"
            android:onClick="Hitung"
            android:text="@string/BtnBilangan"/>

        <Button
            android:id="@+id/BtnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10pt"
            android:paddingBottom="10pt"
            android:paddingLeft="20pt"
            android:paddingRight="20pt"
            android:onClick="Reset"
            android:text="@string/BtnReset" />

    </LinearLayout>

    <TextView
        android:id="@+id/LblBilangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>

</LinearLayout>